# Engine

./: .gitignore  .gitmodules  CMakeLists.txt
core/: CMakeLists.txt  main.cpp
core/include/pickle/: application.h  directx_renderer.h  opengl_renderer.h  renderer.h  sdl_window.h  win32_window.h  window.h
core/src/: application.cpp  directx_renderer.cpp  opengl_renderer.cpp  sdl_window.cpp  win32_window.cpp  window.cpp
directx/: directx.sln
engine/: CMakeLists.txt  engine.cpp
engine/actor/: actor.cpp  actor.h
engine/network/socket/: tcp_socket.h
engine/physics/: collision.cpp  collision.h
engine/render/: raycasting.h
engine/utils/logger/: logger.cpp
engine/utils/search/: a_star_search.cpp  a_star_search.h
engine/utils/time/: timer.h
logger/: CMakeLists.txt
logger/include/pickle/: logger.h  text_modifier.h
logger/src/: logger.cpp
logger/tests/: tests.cpp
math/: CMakeLists.txt  common_operations.h  main.cpp
math/include/pickle/: enums.h  math.h  matrix.h  matrix_operations.h  quaternion.h  quaternion_operations.h  transform_operations.h  vector.h  vector_operations.h
math/include/picklemath/: common_operations.h  math_engine.h  matrix_operations.h  transform_operations.h
math/matrix/: matrix.h  matrix2x2.h  matrix_operations.h  square_matrix.h
math/src/: main.cpp  math.cpp  math_engine.cpp  math_engine.h
math/src/matrix/: matrix.h
math/tests/: tests.cpp
math/vector/: vector.h  vector2.h  vector3.h  vector_operations.h
opengl/: CMakeLists.txt  camera.cpp  camera.h  dir_light.cpp  dir_light.h  light.cpp  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  old_shader.vert  point_light.cpp  point_light.h  renderer.cpp  renderer.h  shader.cpp  shader.frag  shader.geom  shader.h  shader.vert
opengl/cmake/: Findassimp.cmake
opengl/donut/: WaterDropletsMixedBubbled001_NRM16_1K.tif  donut.mtl
opengl/resources/shaders/: default-shader.frag  direct-light-shader.frag  point-light-shader.frag  point-light-shader.vert  shader.frag  shader.vert
opengl/src/: bindable.h  drawable.h  main.cpp  renderer.cpp  renderer.h  window.h
opengl/src/camera/: camera.cpp  camera.h
opengl/src/light/: dir_light.cpp  dir_light.h  light.cpp  light.h  point_light.cpp  point_light.h
opengl/src/model/: file_model.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
opengl/src/scene/: scene.cpp  scene.h  scene_generator.h
opengl/src/scene/examples/: backpack_scene.h  base_box_scene.h  monkey_scene.h
opengl/src/util/: camera_util.h  light_util.h  shader_util.h
raycasting/: CMakeLists.txt  main.cpp  raycasting.cpp  raycasting.h
renderer/: CMakeLists.txt  main.cpp  model.cpp  model.h
renderer/api/: CMakeLists.txt
renderer/api/include/pickle/: camera.h  light.h  mesh.h  renderer.h  scene.h  shader.h  texture.h
renderer/api/include/pickle/light/: direct_light.h  light.h  point_light.h
renderer/api/include/pickle/model/: file_model.h  mesh.h  model.h
renderer/api/lib/stbimage/: CmakeLists.txt
renderer/api/resource/: default.frag  default.vert  default_pixel.shader
renderer/api/src/: camera.cpp  light.cpp  mesh.cpp  model.cpp  renderer.cpp  scene.cpp  shader.cpp  texture.cpp
renderer/api/src/light/: direct_light.cpp  light.cpp  point_light.cpp
renderer/api/src/model/: file_model.cpp  mesh.cpp  model.cpp
renderer/directx/: CMakeLists.txt
renderer/directx/cmake/: FindDirectX11.cmake
renderer/directx/include/pickle/: directx_renderer.h
renderer/directx/resource/: default_pixel.shader  default_vertex.shader
renderer/directx/src/: directx_renderer.cpp
renderer/include/pickle/: application.h  color.h  directx_renderer.h  metal_renderer.h  model.h  opengl_renderer.h  renderer.h  window.h
renderer/include/picklerenderer/: metal_renderer.h  opengl_renderer.h  renderer.h  vulkan_renderer.h
renderer/lib/glad/: CmakeLists.txt
renderer/lib/stbimage/: CmakeLists.txt
renderer/metal/: CMakeLists.txt
renderer/metal/include/pickle/: metal_renderer.h
renderer/metal/src/: metal_renderer.cpp
renderer/opengl/: CMakeLists.txt
renderer/opengl/include/pickle/: opengl_renderer.h
renderer/opengl/lib/glad/: CmakeLists.txt
renderer/opengl/resource/: default.frag  default.vert
renderer/opengl/src/: opengl_renderer.cpp
renderer/resource/: default.vert
renderer/src/: application.cpp  directx_renderer.cpp  metal_renderer.cpp  model.cpp  opengl_renderer.cpp  renderer.cpp  vulkan_renderer.cpp  window.cpp
roguelike/: CMakeLists.txt  main.cpp
roguelike/actor/: bullet.h  hero.cpp  mini_map.h
roguelike/utils/procedural_generation/: drunkard_walk_generator.h  map.h
sandbox/animation/: CMakeLists.txt  art.cpp  fire.cpp  fireball.cpp  main.cpp  star_sky.cpp  tunnel.cpp
sandbox/animation/resource/: art.frag  fire.frag  fireball.frag  shader.frag  shader.vert  star_sky.frag  tunnel.frag
sandbox/opengl/: CMakeLists.txt
sandbox/opengl/resources/shaders/: direct-light-shader.frag  direct-light-shader.vert
sandbox/opengl/src/: bindable.h  main.cpp  renderer.cpp  renderer.h  window.cpp
sandbox/opengl/src/camera/: camera.h
sandbox/opengl/src/light/: light.cpp  point_light.cpp
sandbox/opengl/src/model/: file_model.h  model.cpp  model.h
sandbox/opengl/src/util/: model_util.h
sandbox/rasterization/: CMakeLists.txt  main.cpp
sandbox/rasterization/include/rasterization/: camera.h  color.h  renderer.h
sandbox/rasterization/src/: renderer.cpp
sandbox/rasterization_v2/: CMakeLists.txt  main.cpp
sandbox/rasterization_v2/include/rasterization/: camera.h  model.h  model_instance.h  renderer.h
sandbox/rasterization_v2/src/: camera.cpp  renderer.cpp
sandbox/raytracing/: CMakeLists.txt  geometry.h  main.cpp  raytracing.cpp
sandbox/raytracing/include/raytracing/: ambient_light.h  camera.h  color.h  direct_light.h  light.h  point_light.h  renderer.h  shape.h  sphere.h
sandbox/raytracing/src/: renderer.cpp  shape.cpp  sphere.cpp
sandbox/renderer/: CMakeLists.txt  main.cpp
sandbox/renderer/include/pickle/: model.h  texture.h
sandbox/renderer/src/: texture.cpp
(+288 files in other folders)
